# Flow 2 — Busca parametrizada via env.

appId: com.puciec.cinefav

env:
  SEARCH_TERM: "Matrix"

---
- launchApp

- runFlow:
    when:
      visible:
        id: "login-screen"
    file: "_fragments/login.yaml"

- tapOn:
    id: "movielist-search-button"

- tapOn:
    id: "search-input"

- inputText: ${SEARCH_TERM}

- assertVisible: ${SEARCH_TERM}