# Flow 3 — Favoritar na lista e verificar nos Favoritos.

appId: com.puciec.cinefav

---
- launchApp

- runFlow:
    when:
      visible:
        id: "login-screen"
    file: "_fragments/login.yaml"

- tapOn:
    id: "movie-card-heart-603"

- tapOn:
    id: "movielist-favorites-button"

- assertVisible:
    id: "favorites-item-603"

- assertVisible: "1 favorito"