# Flow 4 — Abrir detalhe do filme, favoritar e voltar.

appId: com.puciec.cinefav

---
- launchApp

- runFlow:
    when:
      visible:
        id: "login-screen"
    file: "_fragments/login.yaml"

- tapOn:
    id: "movie-card-603"

- assertVisible:
    id: "detail-screen"

- tapOn:
    id: "detail-favorite-button"

- tapOn:
    id: "detail-back-button"

- assertVisible:
    id: "movielist-screen"