# Flow 5 — JavaScript embutido (evalScript)

appId: com.puciec.cinefav

---
- launchApp

- runFlow:
    when:
      visible:
        id: "login-screen"
    file: "_fragments/login.yaml"

- evalScript: ${output.termo = ['Matrix', 'Avatar', 'Interestelar'][Math.floor(Math.random() * 3)]}

- tapOn:
    id: "movielist-search-button"

- tapOn:
    id: "search-input"

- inputText: ${output.termo}

- assertVisible: ${output.termo}